<resources>
    <string name="app_name">Score Calculator</string>
    <string name="color_ident">Color Identification:</string>
    <string name="color_points">%d color points</string>
    <string name="color_fix0">0 fixes</string>
    <string name="color_fix1">1 fix</string>
    <string name="color_fix2">2 fixes</string>
    <string name="color_fix3">3 fixes</string>
    <string name="distance_cone">Distances from cones:</string>
    <string name="distance_feet">Distance (ft)</string>
    <string name="distance_points">Points</string>
    <string name="distance_0">Near Ball</string>
    <string name="distance_0_points">%d</string>
    <string name="distance_1">Far Ball</string>
    <string name="distance_1_points">%d</string>
    <string name="distance_2">Robot Home</string>
    <string name="distance_2_points">%d</string>
    <string name="distance_update">Update</string>
    <string name="wb_mission">White/Black (WB) Mission:</string>
    <string name="wb_points">%d wb points</string>
    <string name="wb_failure">WB failure</string>
    <string name="wb_success">WB success</string>
    <string name="total_points">%d points</string>
    <string name="total_reset">Reset</string>
</resources>
